--- a/bills-unpaid.html
+++ b/bills-unpaid.html
@@ -7,7 +7,7 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>UKA | Uganda Revenue Authority</title>
+    <title>URA | Uganda Revenue Authority</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Rental management system by Nouveta LTD" name="description" />
     <meta content="Kelvin Njuguna" name="author" />
