--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>UKA | Uganda Revenue Authority</title>
+    <title>URA | Uganda Revenue Authority</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Keep your finances and membership up to date" name="description" />
     <meta content="Kelvin Njuguna Ndungu" name="author" />
@@ -255,7 +255,7 @@
                 <div id="sidebar-menu">
                     <!-- Left Menu Start -->
                     <ul class="metismenu list-unstyled text-capitalize" id="side-menu">
-                        <li class="menu-title" key="t-pages">Best Birdy Billing system. </li>
+                        <li class="menu-title" key="t-pages">URA Tax Billing & Mngt portal</li>
 
                         <li class="side-bar-button">
                             <a href="bill-new.html"
@@ -269,6 +269,20 @@
                             <a href="index.html" class="waves-effect">
                                 <i class="bx bx-home-circle"></i><span>Dashboard</span>
                             </a>
+                        </li>
+
+                        <li>
+                            <a href="javascript: void(0);" class="waves-effect has-arrow">
+                                <i class="mdi mdi-office-building-marker"></i>
+                                <span>Institutions</span>
+                            </a>
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li><a href="institute-quick-stat.html">Quik Stats</a></li>
+                                <li><a href="institute-invoice-generate.html">Generate Invoice</a></li>
+                                <li><a href="institutes-collections-reports.html">Collections Reports</a></li>
+                                <li><a href="institutes-add-new.html">Add Insitute</a></li>
+                                
+                            </ul>
                         </li>
 
                         <li>
