--- a/parking-fleet-new-sacco.html
+++ b/parking-fleet-new-sacco.html
@@ -7,7 +7,7 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Desk Birdy | Parking Quick Stats</title>
+    <title>URA | Add New Institution</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Rental management system by Nouveta LTD" name="description" />
     <meta content="Kelvin Njuguna" name="author" />
