--- a/housing-market-details.html
+++ b/housing-market-details.html
@@ -957,12 +957,11 @@
                         <div class="col-sm-6 ">
                             <script>
                                 document.write(new Date().getFullYear())
-                            </script> © Craft Collect
+                            </script> © Uganda Revenue Authority
                         </div>
                         <div class="col-sm-6 ">
                             <div class="text-sm-end d-sm-block ">
-                                Homa Bay County Government
-                            </div>
+                                Developing Uganda Together
                         </div>
                     </div>
                 </div>
