--- a/institute-quick-stat.html
+++ b/institute-quick-stat.html
@@ -538,6 +538,7 @@
                                     <div class="collapse navbar-collapse justify-content-between active" id="navbarNavAltMarkup">
                                         <div class="navbar-nav">
                                                 <a class="nav-item nav-link" href="institute-quick-stat.html">Quick Stats</a>
+                                                <a class="nav-item nav-link" href="institute-invoice-generate.html">Create Invoice</a>
                                                 <a class="nav-item nav-link" href="institutes-collections-reports.html">Collections Reports</a>
                                                 <a class="nav-item nav-link" href="institutes-collections-services.html">Charges & Services</a>
                                                 <a class="nav-item nav-link" href="institutes-add-new.html">Add Institute</a>
@@ -555,7 +556,7 @@
                         </div>
 
                     </div>
-                </div>
+                    </div>
                     <!-- end of toolbar -->
                     <div class="row">
                         <div class="col-lg-12 px-sm-30px">
