--- a/institutes-collections-reports-pending.html
+++ b/institutes-collections-reports-pending.html
@@ -1613,8 +1613,8 @@
                                     <div class="btn-toolbar p-3 d-flex justify-content-between align-items-center"
                                         role="toolbar">
                                         <div class="btn-group text-uppercase text-nowrap" role="group" aria-label="Basic example">
-                                            <a href="institutes-collections-reports.html" class="btn btn-outline-primary active" aria-current="page">Pending Invoices</a>
-                                            <a href="institutes-collections-reports-pending.html" class="btn btn-outline-primary">Paid Invoices</a>                                           
+                                            <a href="institutes-collections-reports.html" class="btn btn-outline-primary" aria-current="page">Pending Invoices</a>
+                                            <a href="institutes-collections-reports-pending.html" class="btn btn-outline-primary active">Paid Invoices</a>                                           
                                         </div>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-center p-3"  role="toolbar">
