--- a/vehicle-reports.html
+++ b/vehicle-reports.html
@@ -907,7 +907,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="page-title-box d-sm-flex align-items-center justify-content-between">
-                                <h4 class="mb-sm-0 font-size-18 text-capitalize">Vehicle Clearance</h4>
+                                <h4 class="mb-sm-0 font-size-18 text-capitalize">Vehicle Clearance Reports</h4>
 
                                 <div class="page-title-right">
                                     <ol class="breadcrumb m-0">
