--- a/index.html
+++ b/index.html
@@ -299,6 +299,20 @@
                         </li>
 
                         <li>
+                            <a href="javascript: void(0);" class="waves-effect has-arrow">
+                                <i class="mdi mdi-gas-station"></i>
+                                <span>Fuel Import Duty</span>
+                            </a>
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li><a href="fuel-quick-stat.html">Quik Stats</a></li>
+                                <li><a href="fuel-clearance.html">Fuel Clerance</a></li>
+                                <li><a href="fuel-reports.html">Collections Report</a></li>
+                                <li><a href="fuel-collections-services.html">Charges & Services</a></li>
+                                
+                            </ul>
+                        </li>
+
+                        <li>
                             <a href="live-monitoring.html" class="waves-effect">
                                 <i class="bx bx-user-voice"></i><span>Live Monitoring</span>
                             </a>
