kelvin: the map of uganda has been added

--- a/index.html
+++ b/index.html
@@ -2117,7 +2117,7 @@
                                                     <div class="">
                                                         <div class="d-flex justify-content-between">
                                                             <div>
-                                                                <h4 class="card-title mb-1">Collections by Counties</h4>
+                                                                <h4 class="card-title mb-1">Collections by Sub Districts</h4>
                                                                 <p class="">All Revenue Streams</p>
                                                             </div>
     
