kelvin: the permit

--- a/PrintDocs/Clearance Certificate/permit.html
+++ b/PrintDocs/Clearance Certificate/permit.html
@@ -1137,7 +1137,7 @@
                         <img src="assets/fire-signature.png" alt=" The signature " class="the-stamp " style="height: 14mm;">
                     </div>
                     <hr style="width: 65mm; margin-bottom: 2mm; margin-top: 2mm;">
-                    <p>By Order Of <span class="text-uppercase" style="text-transform: uppercase;">George Okelo Okelo</span>, Director Fire</p>                    
+                    <p>By Order Of <span class="text-uppercase" style="text-transform: uppercase;">John Doe Mapato</span></p>                    
                 </div>
             </div>
                 <div>
